# yubico-manager

./: .travis.yml  Cargo.toml  README.md
examples/: README.md  challenge_response_hmac.rs  challenge_response_otp.rs  configuration_hmac.rs  configuration_otp.rs  serial_number.rs
src/: config.rs  configure.rs  hmacmode.rs  lib.rs  manager.rs  otpmode.rs  sec.rs  yubicoerror.rs
