[package]
name = "yubico_manager"
version = "0.6.4"
authors = ["Flavio Oliveira <flavio@wisespace.io>", "Pierre-Étienne Meunier <pe@coturnix.fr>"]

description = "Yubikey Challenge-Response & Configuration"
license = "MIT OR Apache-2.0"
keywords = ["yubikey", "authentication", "encryption", "configuration", "Challenge-Response"]
categories = ["authentication"]
repository = "https://github.com/wisespace-io/yubico-manager"
readme = "README.md"

[badges]
travis-ci = { repository = "wisespace-io/yubico-manager" }

[lib]
name = "yubico_manager"
path = "src/lib.rs"

[dependencies]
rand = "0.7"
bitflags = "1.2"
libusb = "0.3"
structure = "0.1"

aes-soft = "0.3"
block-modes = "0.3"
hmac = "0.7"
sha-1 = "0.8"

[dev-dependencies]
hex = "0.3.2"
