[package]
name = "yubico_manager"
version = "0.9.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>", "Pierre-Étienne Meunier <pe@coturnix.fr>"]

description = "Yubikey Challenge-Response & Configuration"
license = "MIT OR Apache-2.0"
keywords = ["yubikey", "authentication", "encryption", "configuration", "Challenge-Response"]
categories = ["authentication"]
repository = "https://github.com/wisespace-io/yubico-manager"
readme = "README.md"

[badges]
travis-ci = { repository = "wisespace-io/yubico-manager" }

[lib]
name = "yubico_manager"
path = "src/lib.rs"

[dependencies]
rand = "0.8.4"
bitflags = "1.2"
rusb = "0.9"
structure = "0.1"

aes = "0.7.4"
block-modes = "0.8.1"
hmac = "0.11.0"
sha-1 = "0.9"

[dev-dependencies]
hex = "0.3.2"
